--- a/guides/advanced-testing-patterns/death-tests.mdx
+++ b/guides/advanced-testing-patterns/death-tests.mdx
@@ -1,262 +1,322 @@
 ---
-title: "Writing and Interpreting Death Tests"
-description: "Test code that is expected to cause program termination safely and correctly. Learn best practices, platform considerations, and how to interpret and debug death test failures."
+title: "Writing Death Tests"
+description: "Learn to validate fatal error conditions using GoogleTest's death test mechanisms, ensuring your code reacts safely to critical failures. Includes coverage of correct-to-use cases, error output checking, and platform considerations."
 ---
 
-# Writing and Interpreting Death Tests
+# Writing Death Tests
 
-GoogleTest provides special support for *death tests*—tests that verify your code correctly responds to fatal failures by terminating the program as expected. This guide will walk you through how to write death tests safely and correctly, how they operate behind the scenes, platform-specific considerations, and how to interpret common failure scenarios.
-
----
-
-## 1. Understanding Death Tests
-
-### What Is a Death Test?
-A *death test* verifies that a piece of code causes the program to terminate (crash, `abort()`, or call `_Exit()`) under specified faulty conditions. This is crucial for validating defensive checks such as `assert()` or fatal error handling paths that prevent undefined behavior or security vulnerabilities.
-
-GoogleTest provides macros like `ASSERT_DEATH()` and `EXPECT_DEATH()` for writing these tests.
-
-### Why and When Should You Use Death Tests?
-- To ensure consistency checks and APIs that terminate the process when preconditions are violated behave as designed.
-- To guard against silent failures that could otherwise corrupt program state.
-- To test that your program outputs expected diagnostic messages on fatal errors.
-
-### How Death Test Assertions Differ
-- `ASSERT_DEATH(statement, regex)` causes fatal failure on mismatch and aborts the current test.
-- `EXPECT_DEATH(statement, regex)` reports failure but continues the test.
-
-Both check that:
-1. The `statement` causes the program to terminate.
-2. The termination matches expected criteria (exit code or signal).
-3. The program outputs an error message matching the regex.
+Learn to validate fatal error conditions using GoogleTest's death test mechanisms, ensuring your code reacts safely to critical failures. Includes coverage of correct-to-use cases, error output checking, and platform considerations.
 
 ---
 
-## 2. Writing Death Tests: Step-by-Step
+## Overview
 
-<Steps>
-<Step title="Write a Test That Causes Termination">
-Use `ASSERT_DEATH` or `EXPECT_DEATH` to wrap the statement that should cause the program to terminate.
+Death tests are designed to verify that your code aborts or terminates as expected under fatal error conditions. These tests ensure that critical failures trigger process termination safely, preventing further damage or undefined behavior.
+
+GoogleTest provides specialized macros and utilities to write death tests that run a piece of code in a subprocess and verify its termination status and error output.
+
+### Why Use Death Tests?
+
+Imagine you have assertions or checks in your code that call `abort()`, `exit()`, or cause fatal signals (like segmentation faults) when encountering invalid states. It's crucial to confirm that these failure paths behave as intended:
+
+- The process terminates (doesn't continue silently).
+- The termination is by the right exit status or signal.
+- The error output (usually to `stderr`) matches expected error messages.
+
+Death tests let you automate these validations.
+
+---
+
+## Prerequisites
+
+Before writing death tests, ensure:
+
+- You have GoogleTest properly installed and your project configured to link against it.
+- Your test binary is invoked with the `--gtest_death_test_style` flag if you want to customize the style (`fast` or `threadsafe`).
+- Your environment supports forking or spawning subprocesses (important for death test execution).
+- If your code uses exceptions, verify catch-exceptions behavior as death tests trap exceptions to report failures.
+
+Refer to the [Supported Platforms](https://github.com/google/googletest/blob/main/docs/overview/features-integration/supported-platforms.md) and [Prerequisites](https://github.com/google/googletest/blob/main/docs/getting-started/setup-overview/prerequisites-and-requirements.md) for details.
+
+---
+
+## Expected Outcome
+
+By following this guide, you will be able to:
+
+- Write death tests that confirm your code exits or aborts safely on error.
+- Use GoogleTest macros like `ASSERT_DEATH()`, `EXPECT_DEATH()`, `ASSERT_EXIT()`, and `EXPECT_EXIT()` correctly.
+- Match expected error messages and exit codes with flexible predicates.
+- Understand and control death test styles (`fast` vs `threadsafe`).
+- Handle platform-specific considerations and common pitfalls.
+
+---
+
+## Time Estimate
+
+Expect to spend approximately 15-30 minutes to get comfortable with writing death tests, including writing initial tests and verifying their behavior.
+
+---
+
+## Difficulty Level
+
+Intermediate: Requires familiarity with GoogleTest basics, subprocess behavior, and assertions.
+
+---
+
+# Writing and Using Death Tests
+
+## 1. Writing a Basic Death Test
+
+Death tests run a statement in a child process, expecting it to terminate the process. You can write tests that assert that your code aborts with a particular error message.
 
 ```cpp
-ASSERT_DEATH(MyFunctionThatShouldAbort(), "fatal error message regex");
+TEST(MyDeathTests, AbortsOnInvalidInput) {
+  ASSERT_DEATH(
+      {
+        // Code expected to abort.
+        MyFunctionThatAborts(-1);
+      },
+      "Invalid input");  // Regex to match error message
+}
 ```
 
-The regex can be a string, a compiled regex matcher, or any matcher that works against `stderr`. The match is performed on the error output from the program during termination.
-</Step>
+- The *statement* inside the macro is executed in a subprocess.
+- The second argument is a regular expression (or matcher) that matches the expected output to `stderr`.
 
-<Step title="Use Compound Statements If Needed">
-Wrap multiple statements in braces `{ ... }` if the death test requires multiple lines of logic.
+## 2. Death Test Macros
+
+GoogleTest provides several macros to write death tests:
+
+| Macro                      | Description                                                       |
+|----------------------------|-------------------------------------------------------------------|
+| `ASSERT_DEATH(statement, regex)`  | Fails fatally if statement doesn't cause death or output mismatch. |
+| `EXPECT_DEATH(statement, regex)`  | Same as above but non-fatal failure, allows the test to continue.  |
+| `ASSERT_EXIT(statement, predicate, regex)` | Exits with a given predicate checked on exit status and matches output. |
+| `EXPECT_EXIT(statement, predicate, regex)` | Non-fatal version of ASSERT_EXIT.                                  |
+| `EXPECT_DEATH_IF_SUPPORTED` / `ASSERT_DEATH_IF_SUPPORTED` | Macros that only run death tests if platform supports it, else warns. |
+| `EXPECT_DEBUG_DEATH` / `ASSERT_DEBUG_DEATH`       | Like death macros but active only in debug mode; in opt mode statement runs normally. |
+
+## 3. Matching Exit Status
+
+Use `ASSERT_EXIT`/`EXPECT_EXIT` when you want to precisely check the exit status or signal.
+
+Example:
+
+```cpp
+EXPECT_EXIT(MyFunction(), testing::ExitedWithCode(0), "Success");
+EXPECT_EXIT(MyFunction(), testing::KilledBySignal(SIGKILL), "Killed");  
+```
+
+- `ExitedWithCode(int)` verifies the process exited with the expected status code.
+- `KilledBySignal(int)` verifies termination due to a signal (UNIX only).
+
+## 4. Matching Error Output
+
+The second parameter of death test macros (except `EXPECT_EXIT`) is a matcher or regex. It is matched against the child process `stderr` output. GoogleTest treats a raw string as a regular expression to match.
+
+You can use:
+
+- A string regex:
+
+  ```cpp
+  EXPECT_DEATH(MyFunc(), "Invalid argument");
+  ```
+
+- A `Matcher<const std::string&>` object, including `ContainsRegex()`, for more elaborate matching.
+
+## 5. Using Compound Statements
+
+You can include multiple lines in the death-test statement as a compound statement:
 
 ```cpp
 ASSERT_DEATH({
-  InitializeSystem();
-  TriggerFatalCondition();
+  Foo();
+  Bar();
+  Baz();
 }, "expected error");
 ```
-</Step>
 
-<Step title="Ensure Assertions Are Used Inside Void Functions">
-Remember that
+The macro treats the block as a single statement.
 
-- Fatal assertions (`ASSERT_*`) can only be used inside functions returning `void` because GoogleTest does not use exceptions.
-- Using fatal assertions in constructors or destructors is not allowed and will cause compile errors.
+## 6. Death Test Styles
 
-Use helper void functions or test body functions for death tests.
-</Step>
+GoogleTest supports two styles of death tests:
 
-<Step title="Choose the Right Matcher for Output">
-You can pass:
+- **Fast style (`fast`)**: The child process runs the death test immediately after `fork()`. It's fast but not thread safe.
+- **Threadsafe style (`threadsafe`)**: The child process re-executes the entire test binary with special flags to run only the death test. Slower but safer with multithreaded tests.
 
-- A string interpreted as a regex
-- A `::testing::Matcher<const std::string&>`
-
-Example using gMock matchers:
+Set the style globally or per test using:
 
 ```cpp
-EXPECT_DEATH(DoSomething(), ::testing::HasSubstr("error"));
+GTEST_FLAG_SET(death_test_style, "threadsafe");
 ```
-</Step>
 
-<Step title="Name Death Test Suites Appropriately">
-Name test suites that contain death tests with the `*DeathTest` suffix to ensure they run before non-death tests.
+Note: On Windows, all death tests are threadsafe.
+
+## 7. Platform Considerations
+
+- Thread safety: death tests use `fork()` or process creation that may be unsafe if multiple threads run simultaneously.
+- On Linux, `clone()` is used when available to improve safety.
+- On Windows and Fuchsia, different mechanisms are used but always threadsafe.
+- You must invoke your test binary with a path containing separators rather than just the binary name to ensure threaded death tests run correctly.
+
+## 8. Testing for Exceptions Thrown in Death Tests
+
+Death tests catch exceptions thrown from the statement and treat them as test failures.
 
 ```cpp
-TEST(FooDeathTest, TriggersAbort) {
-  ASSERT_DEATH(Foo(), "expected error message");
+ASSERT_DEATH(throw std::runtime_error("fail"), "fail");
+```
+
+Exceptions escaping the death test macros cause failure.
+
+## 9. Behavior and Side Effects
+
+- Death test statements run in child processes; side effects to memory or variables are local and not seen in the parent process.
+- Avoid returning or throwing exceptions inside death test statements; this is considered a failure.
+- The output for death tests includes indented `[  DEATH   ]` markers to differentiate it.
+
+## 10. Common Pitfalls and Tips
+
+- Do not place multiple death test macros on the same line; this can cause compilation errors.
+- Avoid assertions inside the death test statement that may cause returns or exceptions (such as `ASSERT_` failing).
+- Use non-void functions carefully as death test statements.
+- When using mocks inside death tests with expected exit codes, allow mock leaks using `Mock::AllowLeak()` due to the process termination aspect.
+- Use the `SCOPED_TRACE` macro to attach useful context when invoking death tests in loops or subroutines.
+
+---
+
+# Step-by-Step Instructions
+
+<Steps>
+<Step title="Write Your Death Test">
+Create a test suite whose name ends with `DeathTest` to avoid thread issues, e.g., `MyDeathTest`.
+
+Then, inside a `TEST` or `TEST_F`, use `ASSERT_DEATH` or `EXPECT_DEATH` with the statement expected to terminate and the expected error message.
+
+```cpp
+TEST(MyDeathTest, ShouldAbortOnInvalidValue) {
+  ASSERT_DEATH(MyFunc(-1), "Invalid value");
 }
 ```
+
+Verify the regex matches the actual error output.
 </Step>
 
-<Step title="Run Tests under Death-Test Safe Conditions">
-- Avoid running death tests in multi-threaded environments that could interfere with forking or process spawning.
-- If your environment does spawn threads early, consider using the "threadsafe" death test style.
-</Step>
+<Step title="Choose Death Test Style">
+Decide whether to use `fast` or `threadsafe` style for your tests.
 
-<Step title="Use Messages to Clarify Failures">
-You can append streamed messages to death assertions for clarity:
+- `fast` is quicker but unsafe with threads.
+- `threadsafe` is best for multithreaded environments.
+
+Set style globally in `main()` or per-test:
 
 ```cpp
-ASSERT_DEATH(DoSomethingBad(), "error regex") << "Failed on input X";
+GTEST_FLAG_SET(death_test_style, "threadsafe");
 ```
+</Step>
+
+<Step title="Run and Validate the Test">
+Build and run your test executable.
+
+- The test will fork a child process running the statement.
+- GoogleTest validates the exit status and stderr output.
+
+On failure, detailed diagnostics will be shown including error messages.
+</Step>
+
+<Step title="Check for Common Failures">
+If the test fails unexpectedly, inspect:
+
+- Is the statement terminating the process?
+- Does the stderr output match the expected regex?
+- Are you using any `return` statements or exceptions inside the death test block?
+- Ensure no other death test macros are on the same line.
 </Step>
 </Steps>
 
 ---
 
-## 3. How Death Tests Work Under the Hood
+# Examples
 
-### Dual Processes: Parent and Child
-When a death test runs, GoogleTest forks or clones the test process:
+## Example: Simple Death Test
 
-- The *child process* executes the statement expected to die.
-- The *parent process* waits for the child and verifies:
-  - The child terminated.
-  - The exit code or signal satisfies expectations.
-  - The child output matches the expected regex.
+```cpp
+TEST(MyDeathTest, FailsOnNullptr) {
+  ASSERT_DEATH(MyFunction(nullptr), "Null pointer");
+}
+```
 
-### Death Test Styles
-GoogleTest supports two styles:
+## Example: Death Test with Exit Code
 
-- **Fast:** The child runs the death test logic immediately after forking.
-- **Threadsafe:** The child re-executes the test binary, running only the targeted death test.
+```cpp
+TEST(MyDeathTest, ExitsCleanly) {
+  EXPECT_EXIT(MyCleanupFunction(), testing::ExitedWithCode(0), "Cleanup completed");
+}
+```
 
-The death test style can be configured via the flag `--gtest_death_test_style`.
+## Example: Looping Death Tests with Trace
 
-### Communication via Pipes
-The child process sends status back to the parent through pipes. The parent uses this to decide success or failure and report descriptive messages.
+```cpp
+TEST(MyDeathTest, FailsForNegativeInputs) {
+  for (int i = -10; i < 0; ++i) {
+    SCOPED_TRACE(testing::Message() << "Input: " << i);
+    EXPECT_DEATH(MyFunction(i), "Negative input");
+  }
+}
+```
 
-### Handling Return Statements and Exceptions
-If the death test statement returns or throws an exception instead of terminating, the test fails with a helpful message.
+## Example: Conditional Death Test
 
----
-
-## 4. Platform-Specific Considerations
-
-### POSIX (Linux, macOS)
-- Uses `fork()` (or `clone()` where applicable) and `_Exit()` in child.
-- Supports both "fast" and "threadsafe" death tests.
-
-### Windows
-- Death tests use `CreateProcess()` to spawn child processes instead of forking.
-- Always use threadsafe style.
-- The child process inherits handles for communication.
-
-### Fuchsia
-- Uses `fdio_spawn_etc()` to create child processes.
-- Manages special channels and sockets for communication.
+```cpp
+// If death tests not supported, test runs but warns.
+EXPECT_DEATH_IF_SUPPORTED(MyFatalFunction(), "Fatal error");
+```
 
 ---
 
-## 5. Common Pitfalls and Best Practices
+# Troubleshooting & Tips
 
-### Pitfalls
-- **Non-void Functions:** Using `ASSERT_DEATH()` in non-void functions causes compiler errors.
-- **Multiple Threads Running Outside Death Test:** May cause hangs or warnings.
-- **Not Using Matchers Properly:** Passing invalid or unsupported regex leads to unexpected failures.
-- **Side Effects in Death Tests:** Memory changes or state changes in a death test are local to the child process and not visible to the parent.
+### Common Issues
+
+- **Death Test Does Not Detect Process Termination:**
+  Ensure the death test statement actually causes process termination via `exit()`, `_Exit()`, `abort()`, or a fatal signal. Use `EXPECT_EXIT` with `ExitedWithCode` if you need to check specific codes.
+
+- **Regex Match Failure:**
+  Match against actual `stderr`. Use simple regex to avoid unsupported features. Check for multiline strings carefully.
+
+- **Multiple Death Tests on Same Line:**
+  Compile errors happen if multiple death test macros are placed on the same line. Always separate them explicitly.
+
+- **Death Tests and Threads:**
+  Forking in multithreaded programs can cause deadlocks or hangs. Use `threadsafe` style or ensure single-threaded context.
+
+- **Mock Leak Detector Failure:**
+  When mocking inside death tests and expecting specific exit codes, allow leaks with `Mock::AllowLeak()` to prevent false failures.
 
 ### Best Practices
-- Write death tests in dedicated `*DeathTest` test suites.
-- Prefer `ASSERT_DEATH()` for fatal conditions that should stop the current test, otherwise `EXPECT_DEATH()`.
-- Keep death test statements simple or carefully manage side effects.
-- Use gMock matchers with `EXPECT_DEATH()` for improved clarity.
-- Avoid multiple death test assertions on the same line.
-- Handle complicated predicates with predicate matchers rather than raw regex if possible.
+
+- Name death test suites ending with `DeathTest` for ordering and thread safety.
+- Use `ASSERT_DEATH` for critical failures that should abort the test immediately.
+- Use `EXPECT_DEATH` when non-fatal failure is acceptable.
+- Use `SCOPED_TRACE` extensively in loops or helper functions to get context in failure messages.
+- Prefer `threadsafe` death test style unless performance is critical and test environment is single-threaded.
+
+### Platform Considerations
+
+- On Windows, death tests always run in the `threadsafe` style.
+- On POSIX, the default is `fast`, but this can be changed.
+- Ensure your test binaries are executed with full or relative paths containing separators for `threadsafe` style to work.
 
 ---
 
-## 6. Troubleshooting Death Tests
+# Next Steps & Related Content
 
-| Issue                                    | Diagnosis / Solution                                                    |
-|------------------------------------------|-----------------------------------------------------------------------|
-| Death test hangs or times out            | Check for multiple threads running in parent; use "threadsafe" death test style or move code inside death test statement.
-| Death test fails even though expected message appears | Verify regex accurately matches output; simple regex subset is supported.
-| Death tests do not capture log output    | Log output in the child appears only if the test fails; workaround: break test temporarily.
-| Compiler errors on ASSERT_DEATH in non-void function | Refactor code to use a void-returning helper function or switch to EXPECT_DEATH.
-| Side effects in death test not visible later | Remember death test runs in a separate process with separate memory.
-
----
-
-## 7. Examples
-
-### Basic Death Test Example
-
-```cpp
-TEST(FooDeathTest, ShouldAbortOnInvalidInput) {
-  ASSERT_DEATH(Foo(-1), "Invalid input");
-}
-```
-
-### Death Test with Compound Statement
-
-```cpp
-TEST(FooDeathTest, DiesWhenConditionMet) {
-  ASSERT_DEATH({
-    InitializeFoo();
-    Foo(-1);
-  }, "Invalid input");
-}
-```
-
-### Using gMock Matcher with Death Test
-
-```cpp
-#include <gmock/gmock.h>
-using ::testing::HasSubstr;
-
-TEST(FooDeathTest, PrintsSpecificError) {
-  EXPECT_DEATH(Bar(0), HasSubstr("must be > 0"));
-}
-```
-
----
-
-## 8. Advanced Topics and References
-
-- **Death Test Styles:** Set via `GTEST_FLAG_SET(death_test_style, "threadsafe")` for thread safety or `"fast"` for speed.
-- **Testing Exception Throwing Code:** Use [Exception Assertions](../reference/assertions.md#exceptions) instead.
-- **Combining Death Tests with Mocks:** Allow leaks in mocks if expecting exit codes, see [Advanced Testing Topics](advanced.md#death-tests).
-- **Debugging Failures:** Check the detailed failure messages from the child process; use `ASSERT_DEATH()` with streamed messages for context.
-
----
-
-## 9. Additional Resources
-
-- [Assertions Reference](reference/assertions.md#death) — Detailed syntax and usage of death assertions.
-- [Advanced GoogleTest Topics](advanced.md#death-tests) — Explains death tests in context of advanced features.
-- [Matchers Reference](reference/matchers.md) — For powerful matching capabilities in ASSERT/EXPECT statements.
-- [FAQ on Death Tests](faq.md#My-death-test-hangs-or-seg-faults-How-do-I-fix-it) — Common questions and solutions.
-
----
-
-## Mermaid Diagram: Death Test Execution Flow
-
-```mermaid
-flowchart TD
-  A[Start Death Test] --> B{Death Test Style?}
-  B -->|"fast"| C[Parent forks child]
-  B -->|"threadsafe"| D[Parent forks+executes child subprocess]
-
-  C --> E[In Child: Run Statement]
-  D --> F[In Child: Exec and run statement]
-
-  E -->|Child exits| G[Parent waits for child]
-  F -->|Child exits| G
-
-  G --> H{Did child die?}
-  H -->|Yes| I{Exit status ok?}
-  H -->|No| J[Fail test: Did not die]
-
-  I -->|Yes| K{Output matches regex?}
-  I -->|No| L[Fail test: Wrong exit status]
-
-  K -->|Yes| M[Test Passed]
-  K -->|No| N[Fail test: Output mismatch]
-
-  J & L & N --> O[Report Failure]
-  M --> P[Proceed or End Test]
-
-```
+- Learn more at [Assertions Reference (Death Assertions section)](/docs/reference/assertions.md#death)
+- Understand [Death Tests And Threads](https://github.com/google/googletest/blob/main/docs/advanced.md#death-tests-and-threads)
+- Explore [Supported Platforms](https://github.com/google/googletest/blob/main/docs/overview/features-integration/supported-platforms.md)
+- Refer to the [GoogleTest Primer](https://github.com/google/googletest/blob/main/docs/primer.md) for introductory concepts
+- Check out [Advanced Testing Patterns](https://github.com/google/googletest/blob/main/docs/guides/advanced-testing-patterns/parameterized-and-typed-tests.md)
 
 ---
